2010-06-24 Omair Majid <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/SecurityDesc.java: Fix comments.
	* netx/net/sourceforge/jnlp/JNLPClassLoader.java
	(activateJars): Always call activateNative.
	(activateNative): Search for native code anywhere in the jar.

2010-07-22  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL,
	* README: Updated to match current state of
	play and extended with missing information.
	* acinclude.m4: Add parameter information to
	configure help for all options.
	(FIND_ENDORSED_JARS): Remove unused macro and
	correct typos.
	* configure.ac: Make the --disable-plugin help clearer
	by replacing 'LiveConnect plugin' with 'browser plugin'.

2010-07-20  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(ICEDTEA_BUILD_TARGET): Match formatting used by IcedTea6.
	(ICEDTEA_DEBUG_BUILD_TARGET): Likewise.
	(clean-local): Remove redundant reference to jni-common.o
	(ports): Remove redundant hotspot/build replacement.
	(plugin-tests): Fix broken reference to reflink with
	SRC_DIR_LINK.

2010-02-26  Mark Wielaard  <mark@klomp.org>

	(VERBOSE): Use value of VERBOSE passed from user.

2010-07-20  Andrew John Hughes  <ahughes@redhat.com>

	* configure.ac:
	Remove redundant call to WITH_OPENJDK_SRC_DIR.
	Now pulled in by IT_OBTAIN_HG_REVISIONS.
	* Makefile.am:
	(JDK_TEST_SUITE): Remove old reference to TEST_SUITES.

2010-07-20  Andrew John Hughes  <ahughes@redhat.com>

	Simplify the plugin build.
	* Makefile.am:
	(PLUGIN_SRCDIR): Set unconditionally.
	(PLUGIN_BUILD_DIR): Likewise.
	(LIVECONNECT_DIR): Likewise.
	(LIVECONNECT_SRCS): Likewise.
	(LIVECONNECT_CLASSES): Likewise.
	(LIVECONNECT_JAR): Likewise.
	(LIVECONNECT_SRC): Likewise.
	(PULSE_JAVA_DIR): Likewise.
	(PULSE_JAVA_NATIVE_SRCDIR): Likewise.
	(PULSE_JAVA_NATIVE_SRCS): Likewise.
	(PULSE_JAVA_BUILDDIR): Likewise.
	(PULSE_JAVA_NATIVE_OBJECTS): Likewise.
	(PULSE_JAVA_JAVA_SRCDIR): Likewise.
	(PULSE_JAVA_CLASS_DIR): Likewise.
	(ICEDTEA_ENV): Set ALT_LIVECONNECT_DIST conditionally.